--- a/core/templates/core/library_list.html
+++ b/core/templates/core/library_list.html
@@ -87,7 +87,7 @@
                         {% if library_type == 'dlp' or library_type == 'tenx' %}
                             {% if library.jira_ticket %}
                             <td>
-                                <a href="https://www.bcgsc.ca/jira/browse/{{ library.jira_ticket }}">{{ library.jira_ticket }}</a>
+                                <a href="https://www.bcgsc.ca/jira/browse/{{ library.jira_ticket }}">{{ library.jira_ticket }}<br />{{ library.sample.sample_id }}</a>
                             </td>
                             {% else %}
                             <td>None</td>
